[gd_scene load_steps=6 format=3 uid="uid://bwai4cfsk2l1m"]

[ext_resource type="Script" uid="uid://dx55k7aprgsv3" path="res://npc_template.gd" id="1_yok17"]
[ext_resource type="Texture2D" uid="uid://djtubuafbuhif" path="res://icon.svg" id="2_ffdvq"]
[ext_resource type="PackedScene" uid="uid://bk1sgujwf0wk3" path="res://speech_bubble.tscn" id="3_ffdvq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rl1cu"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_74gw5"]
radius = 6.0

[node name="NPCtemplate" type="CharacterBody2D"]
script = ExtResource("1_yok17")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.109375, 0.109375)
texture = ExtResource("2_ffdvq")

[node name="Detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource("CircleShape2D_rl1cu")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_74gw5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="SpeechBubble" parent="." instance=ExtResource("3_ffdvq")]

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="Detect" to="." method="_on_detect_body_exited"]
